--- a/styles/section_about_me.css
+++ b/styles/section_about_me.css
@@ -1,27 +1,27 @@
 /*section 2 =====================================================*/
-.page-about{
-  background: #E5E5E5;
+.about-section {
+  background: #e5e5e5;
 }
-  /*block repeat with title and text==================================*/
-  
-  /*block repeat with title===================================*/
-  .title-repeat{
-  color:#000000;
+/*block repeat with title and text==================================*/
+
+/*block repeat with title===================================*/
+.title-repeat {
+  color: #000000;
   font-weight: 500;
   font-size: 32px;
   margin-bottom: 50px;
   text-align: center;
-  }
-  .text-repeat{
+}
+.text-repeat {
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
   text-align: center;
   color: #727272;
-  }
+}
 /*text about me container title + text=============================*/
 /*============================================================================*/
-.page-about__text-container{
+.about-section__text-container {
   width: 540px;
   height: 147px;
   max-width: 1150px;
@@ -34,69 +34,69 @@
 }
 /*blue big band======================================================*/
 
-.page-about__blue-band-container{
+.about-section__blue-band-container {
   height: 250px;
-  background:  #34547A;
+  background: #34547a;
   display: flex;
   justify-content: center;
   align-items: center;
   /* margin-bottom:102px; */
 }
-.page-about__image-container{
+.about-section__image-container {
   max-width: 1150px;
 }
-.page-about__image{
+.about-section__image {
   margin-right: 49px;
 }
-.page-about__blue-band-container :last-child{
+.about-section__blue-band-container :last-child {
   margin-right: 0px;
 }
 /*my skils and photo ===========================================================*/
 
 /*=============================================================================*/
-.page-about__content-container{
+.about-section__content-container {
   height: 653px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 /*container with skills==========================================*/
-.page-about__skills-container{
+.about-section__skills-container {
   margin-right: 150px;
 }
-.page-about__skills-container  :last-child{
+.about-section__skills-container :last-child {
   margin-bottom: 0px;
 }
-.page-about__title{
+.about-section__title {
   font-weight: 500;
   font-size: 32px;
   color: #000000;
   margin-bottom: 50px;
 }
-.page-about__text{
+.about-section__text {
   color: #727272;
   font-weight: 400;
-font-size: 16px;
-margin-bottom: 19.88px;
+  font-size: 16px;
+  margin-bottom: 19.88px;
 }
-.page-about__blue-line{
+.about-section__blue-line {
   display: inline-block;
-  background: #34547A;
+  background: #34547a;
   height: 4px;
   width: 349.36px;
   margin-right: -8px;
 }
-.page-about__grey-line{
+.about-section__grey-line {
   display: inline-block;
-  background: #C4C4C4;
+  background: #c4c4c4;
   height: 4px;
   width: 95.64px;
 }
-.page-about__line-container{
+.about-section__line-container {
   margin-bottom: 29.76px;
 }
 /*photo container=================================*/
-.page-about__photo{
+.about-section__photo {
   width: 550px;
   height: 450px;
 }
