--- a/styles/section_design.css
+++ b/styles/section_design.css
@@ -49,6 +49,11 @@
 .design-section__button {
   width: 225px;
   height: 65px;
+}
+.button-repeat {
+  font-weight: 400;
+  font-size: 16px;
   background: #34547a;
   color: #ffffff;
+  letter-spacing: 0.1em;
 }
