--- a/styles/footer.css
+++ b/styles/footer.css
@@ -30,3 +30,22 @@
 .page-footer__images :last-child {
   margin-right: 0px;
 }
+
+@media (min-width: 320px) and (max-width: 1279px) {
+  .page-footer {
+    height: 210px;
+  }
+  .page-footer__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+  }
+  .page-footer__text :first-child {
+    text-align: center;
+  }
+  .page-footer__text {
+    margin-bottom: 40px;
+  }
+}
