--- a/styles/section_about_me.css
+++ b/styles/section_about_me.css
@@ -19,10 +19,6 @@
 }
 /*text about me container title + text=============================*/
 .about-section__text-container {
-  width: 540px;
-  height: 147px;
-  max-width: 1150px;
-  margin: 0px auto;
   height: 366px;
   display: flex;
   flex-direction: column;
@@ -66,12 +62,14 @@
   font-size: 32px;
   color: #000000;
   margin-bottom: 50px;
+  max-width: 403px;
 }
 .about-section__text {
   color: #727272;
   font-weight: 400;
   font-size: 16px;
   margin-bottom: 19.88px;
+  max-width: 540px;
 }
 .about-section__blue-line {
   display: inline-block;
@@ -93,4 +91,98 @@
 .about-section__photo {
   width: 550px;
   height: 450px;
+}
+@media (min-width: 320px) and (max-width: 1279px) {
+  .about-section {
+    margin: 0px;
+    padding: 0px;
+  }
+  .about-section__wrapper {
+    background: #ffffff;
+    padding-top: 91px;
+  }
+  .about-section__text-container {
+    margin-bottom: 82px;
+  }
+  .about-section__blue-band-container {
+    margin: 0px;
+    padding: 0px;
+    height: 477px;
+  }
+  .about-section__image-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px;
+    padding: 0px;
+    max-width: 375px;
+  }
+  .about-section__image-container :nth-child(even) {
+    margin-left: 57px;
+  }
+  .about-section__image-container :nth-child(odd) {
+    margin-left: 18px;
+  }
+
+  .about-section__image {
+    margin: 0;
+    width: 141px;
+    height: 50px;
+    margin-top: 75px;
+  }
+
+  .about-section__content-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    padding: 0px;
+    margin-bottom: 103px;
+  }
+
+  .about-section__skills-container {
+    order: 2;
+    display: block;
+    margin: 0px;
+    padding: 0px;
+    margin-top: 98px;
+  }
+  .about-section__photo-container {
+    order: 1;
+    margin-top: 82px;
+  }
+  .about-section__skills-container :last-child {
+  }
+  .about-section__title {
+    display: flex;
+    justify-content: center;
+    margin: 0px;
+    padding: 0px;
+    height: 38px;
+    margin-bottom: 42px;
+  }
+  .about-section__text {
+    max-width: 323px;
+  }
+  .about-section__blue-line {
+    width: 266.14px;
+  }
+  .about-section__grey-line {
+    width: 72px;
+  }
+  .about-section__photo {
+    max-width: 339px;
+    max-height: 275px;
+    width: 100%;
+    height: 100%;
+  }
+  .title-repeat {
+    font-weight: 500;
+    font-size: 32px;
+    font-weight: 500;
+    font-size: 32px;
+  }
+  .text-repeat {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+  }
 }
