--- a/styles/section_design.css
+++ b/styles/section_design.css
@@ -35,7 +35,7 @@
 }
 /*text ========================================================*/
 .design-section__text {
-  width: 540px;
+  max-width: 540px;
   height: 67px;
   font-weight: 400;
   font-size: 16px;
@@ -53,4 +53,70 @@
   background: #34547a;
   color: #ffffff;
   letter-spacing: 0.1em;
+}
+
+@media (min-width: 320px) and (max-width: 1279px) {
+  .design-section {
+    display: block;
+    background: #e5e5e5;
+    margin: 0px;
+    padding: 0px;
+  }
+  .design-section__contents-wrapper {
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 0px;
+  }
+
+  .design-section__image-container {
+    display: block;
+    margin: 0px;
+    padding: 0px;
+    margin-bottom: 51px;
+  }
+  .design-section__image {
+    margin: 0px;
+    padding: 0px;
+
+    max-width: 298px;
+    max-height: 195px;
+    width: 100%;
+    height: 100%;
+  }
+  .design-section__content-block {
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 95px;
+  }
+  .design-section__title {
+    display: block;
+    margin: 0px;
+    padding: 0px;
+    width: 302px;
+    height: 41px;
+    font-weight: 500;
+    font-size: 36px;
+    margin-bottom: 44px;
+  }
+  .design-section__text {
+    display: block;
+    margin: 0px;
+    padding: 0px;
+    max-width: 322px;
+    height: 98px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    margin-bottom: 44px;
+  }
+  .design-section__button {
+    display: block;
+  }
 }
