--- a/styles/section_how_i_work.css
+++ b/styles/section_how_i_work.css
@@ -32,3 +32,38 @@
   left: 46%;
   z-index: 3;
 }
+.work-section__text {
+  width: 540px;
+  height: 67px;
+}
+@media (min-width: 320px) and (max-width: 1279px) {
+  .work-section {
+    height: initial;
+  }
+  .work-section__title {
+    margin-bottom: 34px;
+  }
+  .work-section__text {
+    width: 323px;
+    height: 98px;
+  }
+  .work-section__images-container {
+    display: flex;
+    margin-bottom: 91px;
+  }
+
+  .work-section__image-code {
+    padding-right: 10px;
+    max-width: 339px;
+    max-height: 185px;
+    width: 100%;
+    height: 100%;
+  }
+  .work-section__image-play {
+    position: relative;
+    max-width: 75px;
+    max-height: 75px;
+    top: 50px;
+    left: 38%;
+  }
+}
