--- a/styles/section_how_i_work.css
+++ b/styles/section_how_i_work.css
@@ -1,6 +1,5 @@
 /*section ====================================================*/
 .work-section {
-  height: 1004px;
   background: #eeeff1;
   display: flex;
   flex-direction: column;
@@ -9,31 +8,44 @@
 /*section-container================================================*/
 .work-section__container {
   max-width: 1110px;
-  margin: opx auto;
   padding-top: 100px;
   margin-bottom: 57px;
 }
 /*container images===================================================*/
 .work-section__images-container {
   position: relative;
-}
-/*position second images=============================================================*/
-.work-section__image-code {
-  position: relative;
-  right: 50px;
   width: 1110px;
   height: 600px;
+  margin-bottom: 100px;
+}
+
+.work-section__images-container::after {
+  content: "";
+  position: absolute;
+  width: 1110px;
+  height: 600px;
+  background-color: rgba(0, 0, 0, 0.22);
+  z-index: 2;
+}
+
+/*position second images=============================================================*/
+.work-section__image-code {
+  position: absolute;
+  max-width: 1110px;
+  max-height: 600px;
+  width: 100%;
+  height: 100%;
 }
 .work-section__image-play {
   width: 100px;
   height: 100px;
-  position: relative;
+  position: absolute;
   top: 42%;
-  left: 46%;
+  left: 45%;
   z-index: 3;
 }
 .work-section__text {
-  width: 540px;
+  max-width: 540px;
   height: 67px;
 }
 @media (min-width: 320px) and (max-width: 1279px) {
@@ -48,19 +60,25 @@
     height: 98px;
   }
   .work-section__images-container {
-    display: flex;
+    position: relative;
+    width: 339px;
+    height: 185px;
     margin-bottom: 91px;
   }
-
+  .work-section__images-container::after {
+    width: 339px;
+    height: 185px;
+  }
   .work-section__image-code {
-    padding-right: 10px;
+    position: absolute;
+    right: 0;
     max-width: 339px;
     max-height: 185px;
     width: 100%;
     height: 100%;
   }
   .work-section__image-play {
-    position: relative;
+    position: absolute;
     max-width: 75px;
     max-height: 75px;
     top: 50px;
