--- a/styles/section_with_photo.css
+++ b/styles/section_with_photo.css
@@ -1,13 +1,14 @@
 /*section with 8 photo=============================================*/
 .photo-section {
-  height: 1016px;
   background: #e5e5e5;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 /*container with 8 blocks photo with logos==================================================*/
 .photo-section__container {
+  /* background: #e5e5e5; */
+  margin-top: 28px;
+  margin-bottom: 28px;
   display: grid;
   grid-template-areas:
     "A B C D"
@@ -39,27 +40,29 @@
 }
 .photo-block {
   position: relative;
-  width: 480px;
-  height: 480px;
+  max-width: 480px;
+  max-height: 480px;
 }
 .photo-section__logo {
   position: absolute;
-  z-index: 0;
+  z-index: -1;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 .photo-section__photo {
-  position: absolute;
   z-index: 1;
-  width: inherit;
-  height: inherit;
+  max-width: 480px;
+  max-height: 480px;
+  width: 100%;
+  height: 100%;
 }
 .photo-block::after {
   position: absolute;
-  z-index: 0;
-  width: 480px;
-  height: 480px;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  left: 0px;
   content: "";
   background-color: rgba(52, 84, 122, 0.8);
 }
@@ -94,5 +97,9 @@
   .photo-block::after {
     width: 188px;
     height: 188px;
+  }
+  .photo-section__logo {
+    width: 48px;
+    height: 27px;
   }
 }
