--- a/styles/section_with_photo.css
+++ b/styles/section_with_photo.css
@@ -75,9 +75,8 @@
 
 @media (min-width: 320px) and (max-width: 1279px) {
   .photo-section {
+    background: #ffffff;
     height: initial;
-    margin-top: 34px;
-    margin-bottom: 34px;
   }
 
   .photo-section__container {
