--- a/styles/section_about_me.css
+++ b/styles/section_about_me.css
@@ -1,6 +1,7 @@
 /*section 2 =====================================================*/
 .about-section {
   background: #e5e5e5;
+  padding-bottom: 101px;
 }
 /*block repeat with title===================================*/
 .title-repeat {
@@ -9,6 +10,7 @@
   font-size: 32px;
   margin-bottom: 50px;
   text-align: center;
+  line-height: 38px;
 }
 .text-repeat {
   font-weight: 400;
@@ -21,7 +23,8 @@
 
 /*blue big band======================================================*/
 .about-section__blue-band-container {
-  height: 250px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   background: #34547a;
   display: flex;
   justify-content: center;
@@ -45,7 +48,7 @@
 }
 /*my skils and photo ===========================================================*/
 .about-section__content-container {
-  height: 653px;
+  margin-top: 102px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -87,7 +90,7 @@
   background: #34547a;
   height: 4px;
   width: 349.36px;
-  margin-right: -8px;
+  margin-right: -5px;
 }
 .about-section__grey-line {
   display: inline-block;
@@ -100,8 +103,11 @@
 }
 /*photo container=================================*/
 .about-section__photo {
-  width: 550px;
-  height: 450px;
+  max-width: 555px;
+  max-height: 450px;
+  width: 100%;
+  height: 100%;
+  /* margin-bottom: 101px; */
 }
 @media (min-width: 320px) and (max-width: 1279px) {
   .about-section {
@@ -174,6 +180,11 @@
   }
   .about-section__text {
     max-width: 323px;
+    margin-bottom: 0px;
+  }
+  .about-section__sub-title {
+    display: flex;
+    justify-content: center;
   }
   .about-section__blue-line {
     width: 266.14px;
