--- a/styles/section_design.css
+++ b/styles/section_design.css
@@ -1,7 +1,6 @@
 /*beginning of the design and layout section======================*/
 .design-section {
   background-color: #eeeff1;
-  height: 700px;
 }
 /*wrapper main block with image title text button===================================*/
 .design-section__contents-wrapper {
@@ -11,6 +10,7 @@
   align-items: center;
   position: relative;
   left: 90px;
+  padding-bottom: 146px;
 }
 /*container image======================================================*/
 .design-section__image-container {
@@ -23,24 +23,24 @@
   justify-content: space-between;
   align-items: flex-start;
   max-width: 540px;
-  height: 297px;
 }
 /*title h1=======================================================================*/
 .design-section__title {
   color: #000000;
   width: 541px;
-  height: 45px;
+  line-height: 79px;
   font-weight: 500;
   font-size: 48px;
+  margin-bottom: 50px;
 }
 /*text ========================================================*/
 .design-section__text {
   max-width: 540px;
-  height: 67px;
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
   color: #727272;
+  margin-bottom: 58px;
 }
 /*button =========================================================*/
 .design-section__button {
@@ -75,12 +75,11 @@
     display: block;
     margin: 0px;
     padding: 0px;
-    margin-bottom: 51px;
+    margin-bottom: 35px;
   }
   .design-section__image {
     margin: 0px;
     padding: 0px;
-
     max-width: 298px;
     max-height: 195px;
     width: 100%;
@@ -99,17 +98,15 @@
     margin: 0px;
     padding: 0px;
     width: 302px;
-    height: 41px;
     font-weight: 500;
     font-size: 36px;
-    margin-bottom: 44px;
+    margin-bottom: 40px;
   }
   .design-section__text {
     display: block;
     margin: 0px;
     padding: 0px;
     max-width: 322px;
-    height: 98px;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
@@ -117,6 +114,5 @@
     margin-bottom: 44px;
   }
   .design-section__button {
-    display: block;
   }
 }
