--- a/styles/section_how_i_work.css
+++ b/styles/section_how_i_work.css
@@ -46,18 +46,16 @@
 }
 .work-section__text {
   max-width: 540px;
-  height: 67px;
 }
 @media (min-width: 320px) and (max-width: 1279px) {
   .work-section {
-    height: initial;
+    /* height: initial; */
   }
   .work-section__title {
     margin-bottom: 34px;
   }
   .work-section__text {
     width: 323px;
-    height: 98px;
   }
   .work-section__images-container {
     position: relative;
