--- a/styles/section_about_me.css
+++ b/styles/section_about_me.css
@@ -106,7 +106,6 @@
   max-height: 450px;
   width: 100%;
   height: 100%;
-  /* margin-bottom: 101px; */
 }
 @media (min-width: 320px) and (max-width: 1279px) {
   .about-section {
@@ -123,7 +122,7 @@
   .about-section__blue-band-container {
     margin: 0px;
     padding: 0px;
-    height: 477px;
+    padding-bottom: 74px;
   }
   .about-section__image-container {
     height: inherit;
