--- a/styles/section_about_me.css
+++ b/styles/section_about_me.css
@@ -1,9 +1,13 @@
 /*section 2 =====================================================*/
 .about-section {
   background: #e5e5e5;
+  padding-top: 119px;
   padding-bottom: 101px;
 }
 /*block repeat with title===================================*/
+.about-section__wrapper {
+  margin: 0px auto;
+}
 .title-repeat {
   color: #000000;
   font-weight: 500;
@@ -18,6 +22,7 @@
   line-height: 26px;
   text-align: center;
   color: #727272;
+  max-width: 540px;
 }
 /*text about me container title + text=============================*/
 
@@ -35,6 +40,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 100px;
 }
 .about-section__image-container {
   max-width: 1150px;
@@ -47,7 +53,9 @@
 }
 /*my skils and photo ===========================================================*/
 .about-section__content-container {
-  margin-top: 102px;
+  max-width: 1150px;
+  margin: 0px auto;
+  padding-top: 102px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -60,20 +68,17 @@
   margin-bottom: 0px;
 }
 .about-section__title {
-  margin-top: 119px;
 }
 .about-section__text {
   color: #727272;
   font-weight: 400;
   font-size: 16px;
-  margin-bottom: 100px;
-  max-width: 540px;
 }
 .about-section__sub-text {
   color: #727272;
   font-weight: 400;
   font-size: 16px;
-  margin-bottom: 19.88px;
+  margin-bottom: 20px;
   max-width: 128px;
 }
 .about-section__sub-title {
@@ -88,7 +93,7 @@
   display: inline-block;
   background: #34547a;
   height: 4px;
-  width: 349.36px;
+  width: 350px;
   margin-right: -5px;
 }
 .about-section__grey-line {
@@ -98,7 +103,7 @@
   width: 95.64px;
 }
 .about-section__line-container {
-  margin-bottom: 29.76px;
+  margin-bottom: 30px;
 }
 /*photo container=================================*/
 .about-section__photo {
@@ -166,8 +171,6 @@
     order: 1;
     margin-top: 82px;
   }
-  .about-section__skills-container :last-child {
-  }
   .about-section__title {
     display: flex;
     justify-content: center;
@@ -185,7 +188,7 @@
     justify-content: center;
   }
   .about-section__blue-line {
-    width: 266.14px;
+    width: 266px;
   }
   .about-section__grey-line {
     width: 72px;
