--- a/styles/section_design.css
+++ b/styles/section_design.css
@@ -4,17 +4,16 @@
 }
 /*wrapper main block with image title text button===================================*/
 .design-section__contents-wrapper {
-  max-width: 1105px;
+  max-width: 1028px;
   margin: 0px auto;
   display: flex;
   align-items: center;
-  position: relative;
-  left: 90px;
-  padding-bottom: 146px;
+  padding-left: 50px;
+  padding-bottom: 130px;
 }
 /*container image======================================================*/
 .design-section__image-container {
-  margin-right: 143.1px;
+  margin-right: 143px;
 }
 /*container block with content and button=======================================*/
 .design-section__content-block {
@@ -22,12 +21,10 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  max-width: 540px;
 }
 /*title h1=======================================================================*/
 .design-section__title {
   color: #000000;
-  width: 541px;
   line-height: 79px;
   font-weight: 500;
   font-size: 48px;
@@ -44,8 +41,7 @@
 }
 /*button =========================================================*/
 .design-section__button {
-  width: 225px;
-  height: 65px;
+  padding: 25px 41px;
 }
 .button-repeat {
   font-weight: 400;
@@ -112,7 +108,5 @@
     line-height: 19px;
     text-align: center;
     margin-bottom: 44px;
-  }
-  .design-section__button {
   }
 }
