--- a/styles/section_how_i_work.css
+++ b/styles/section_how_i_work.css
@@ -4,19 +4,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 100px;
+  padding-top: 100px;
 }
 /*section-container================================================*/
 .work-section__container {
   max-width: 1110px;
-  padding-top: 100px;
-  margin-bottom: 57px;
+  padding-bottom: 57px;
 }
 /*container images===================================================*/
 .work-section__images-container {
   position: relative;
   width: 1110px;
   height: 600px;
-  margin-bottom: 100px;
 }
 
 .work-section__images-container::after {
@@ -40,13 +40,12 @@
   width: 100px;
   height: 100px;
   position: absolute;
-  top: 42%;
-  left: 45%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 3;
 }
-.work-section__text {
-  max-width: 540px;
-}
+
 @media (min-width: 320px) and (max-width: 1279px) {
   .work-section__title {
     margin-bottom: 34px;
