--- a/styles/section_with_form.css
+++ b/styles/section_with_form.css
@@ -1,5 +1,7 @@
 .form-section {
   background: #eeeff1;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .form-section__wrapper {
   display: flex;
@@ -7,9 +9,7 @@
   align-items: center;
 }
 .form-section__text-container {
-  padding-top: 100px;
   padding-bottom: 65px;
-  width: 540px;
 }
 .form-section__input-block {
   display: flex;
@@ -30,6 +30,7 @@
   resize: none;
   color: #5f5d5d;
   padding-top: 17px;
+  padding-left: 20px;
   width: 540px;
   height: 175px;
   font-weight: 400;
@@ -39,9 +40,7 @@
 .form-section__button-submit {
   display: block;
   margin: 0px auto;
-  width: 190px;
-  height: 55px;
-  margin-bottom: 100px;
+  padding: 20px 42px;
 }
 
 @media (min-width: 320px) and (max-width: 1279px) {
