--- a/styles/section_with_photo.css
+++ b/styles/section_with_photo.css
@@ -1,43 +1,18 @@
 /*section with 8 photo=============================================*/
 .photo-section {
   background: #e5e5e5;
-  display: flex;
-  justify-content: center;
+  padding-top: 28px;
+  padding-bottom: 28px;
 }
 /*container with 8 blocks photo with logos==================================================*/
 .photo-section__container {
-  /* background: #e5e5e5; */
-  margin-top: 28px;
-  margin-bottom: 28px;
+  margin: 0px auto;
+  max-width: 1920px;
   display: grid;
-  grid-template-areas:
-    "A B C D"
-    "E F G H";
+  grid-template-rows: repeat (2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
-.photo-section__column-images-1 {
-  grid-area: A;
-}
-.photo-section__column-images-2 {
-  grid-area: B;
-}
-.photo-section__column-images-3 {
-  grid-area: C;
-}
-.photo-section__column-images-4 {
-  grid-area: D;
-}
-.photo-section__column-images-5 {
-  grid-area: E;
-}
-.photo-section__column-images-6 {
-  grid-area: F;
-}
-.photo-section__column-images-7 {
-  grid-area: G;
-}
-.photo-section__column-images-8 {
-  grid-area: H;
-}
+
 .photo-block {
   position: relative;
   max-width: 480px;
@@ -80,25 +55,32 @@
   }
 
   .photo-section__container {
-    display: grid;
-    grid-template-areas:
-      "A B"
-      "D C"
-      "F E"
-      "G H";
+    max-width: 960px;
+    margin: 0px auto
+    grid-template-rows: repeat (4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .photo-block {
     position: relative;
-    width: 188px;
-    height: 188px;
+    max-width: 480px;
+    max-height: 480px;
+  }
+  .photo-section__photo{
+    max-width: 480px;
+    max-height: 480px;
+    width: 100%;
+    height: 100%;
+
   }
   .photo-block::after {
-    width: 188px;
-    height: 188px;
+    max-width: 480px;
+    max-height: 480px;
+    width: 100%;
+    height: 100%;
   }
   .photo-section__logo {
-    width: 48px;
-    height: 27px;
+    width: 70px;
+    height: 35px;
   }
 }
