--- a/styles/section_design.css
+++ b/styles/section_design.css
@@ -104,6 +104,8 @@
     font-size: 16px;
     line-height: 19px;
     text-align: center;
+    padding-left: 26px;
+    padding-right: 26px;
     margin-bottom: 44px;
   }
 }
