--- a/styles/section_about_me.css
+++ b/styles/section_about_me.css
@@ -54,7 +54,7 @@
 }
 .about-section__block-counter :first-child {
   padding-top: 3px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 21px;
   color: #ffffff;
@@ -111,7 +111,6 @@
   margin-bottom: 50px;
   max-width: 403px;
 }
-
 .about-section__blue-line {
   background: #34547a;
   height: 4px;
@@ -142,7 +141,7 @@
     padding-top: 91px;
   }
   .about-section__text-container {
-    margin-bottom: 82px;
+    padding-bottom: 82px;
   }
   .about-section__blue-band-container {
     margin: 0px;
@@ -155,20 +154,24 @@
   .about-section__image-container {
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 0px;
+    margin: 0px 19px;
     padding: 0px;
-    max-width: 400px;
+
+    max-width: 420px;
   }
   .about-section__block-image {
-    width: 155px;
-    height: 50px;
-    margin-bottom: 50px;
     margin-right: 0px;
+    max-width: 152px;
+    max-height: 50px;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 50px;
   }
+
   .about-section__image-container :nth-child(5) {
     margin-bottom: 0px;
   }
-  .about-section__block-image :nth-child(6) {
+  .about-section__image-container :nth-child(6) {
     margin-bottom: 0px;
   }
   .about-section__image {
@@ -183,7 +186,7 @@
     flex-direction: column;
     margin: 0px;
     padding: 0px;
-    margin-bottom: 103px;
+    padding-bottom: 103px;
   }
 
   .about-section__skills-container {
