--- a/styles/section_with_photo.css
+++ b/styles/section_with_photo.css
@@ -9,7 +9,7 @@
   margin: 0px auto;
   max-width: 1920px;
   display: grid;
-  grid-template-rows: repeat (2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(4, 1fr);
 }
 
@@ -56,9 +56,10 @@
 
   .photo-section__container {
     max-width: 960px;
-    margin: 0px auto
-    grid-template-rows: repeat (4, 1fr);
+    margin: 0px auto;
+    grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(2, 1fr);
+    grid-auto-flow: column;
   }
 
   .photo-block {
@@ -66,12 +67,11 @@
     max-width: 480px;
     max-height: 480px;
   }
-  .photo-section__photo{
+  .photo-section__photo {
     max-width: 480px;
     max-height: 480px;
     width: 100%;
     height: 100%;
-
   }
   .photo-block::after {
     max-width: 480px;
